fixed a margin on mobile

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -138,7 +138,7 @@ div.main {
     display: none;
     flex-direction: column;
     align-items: center;
-
+    margin: 0;
     a {
       width: 100%;
       background: white;
